tests/NormalTests/paczka1/fuzzy1/61631095.err
Error in line 5: 2CKo A274 56,3
Error in line 10: szv A991 80,8
Error in line 27: szv S692 32,7
Error in line 36: A991 A274 23,09
Error in line 29: 2CKo A991 205,7
